kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: message-backend
    labels:
        app: message-backend
    namespace: example
spec:
    replicas: 1
    selector:
        matchLabels:
            app: message-backend
    template:
        metadata:
            labels:
                app: message-backend
        spec:
            containers:
                - name: message-backend-service
                  image: message_server:latest
                  imagePullPolicy: Never
                  ports:
                     - containerPort: 8000
                - name: message-backend-db
                  image: message_backend_db:latest
                  imagePullPolicy: Never
