kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    namespace: example
    labels:
        app: message-service
    name: message-service
spec:
    ports:
        - name: message-backend
          port: 80
          targetPort: 8000
    selector:
        app: message-backend
    type: NodePort
